<resources>
    <string name="app_name">MultiProtocolCharger</string>
    <string name="char_33">!</string>
    <string name="char_34">\"</string>
    <string name="char_35">#</string>
    <string name="char_36">$</string>
    <string name="char_37">%</string>
    <string name="char_38">&amp;</string>
    <string name="char_39">\'</string>
    <string name="char_40">(</string>
    <string name="char_41">)</string>
    <string name="char_42">*</string>
    <string name="char_43">+</string>
    <string name="char_44">,</string>
    <string name="char_45">-</string>
    <string name="char_46">.</string>
    <string name="char_47">/</string>
    <string name="char_58">:</string>
    <string name="char_59">;</string>
    <string name="char_60">&lt;</string>
    <string name="char_61">=</string>
    <string name="char_62">&gt;</string>
    <string name="char_63">?</string>
    <string name="char_64">@</string>
    <string name="char_91">[</string>
    <string name="char_92">\\</string>
    <string name="char_93">]</string>
    <string name="char_94">^</string>
    <string name="char_95">_</string>
    <string name="char_96">`</string>
    <string name="char_123">{</string>
    <string name="char_124">|</string>
    <string name="char_125">}</string>
    <string name="char_126">~</string>
    <string name="welcome_hint_text1">请按屏幕下方圆形按钮</string>
    <string name="welcome_hint_text2">开始充电</string>
    <string name="check_device_loading">设备自检中...</string>
    <string name="nfc_no_sn">未写号，请联系管理员</string>
    <string name="no_port">充电口不可用，请联系管理员</string>
    <string name="upgrade_download_progress">正在下载:%1$d%%</string>
    <string name="upgrade_file_verify">正在校验完整性...</string>
    <string name="upgrade_start_unzip">正在解压...</string>
    <string name="upgrade_start_check_fireware">正在验证更新包...</string>
    <string name="upgrade_verify_system_progress">正在验证更新包:%1$d%%</string>
    <string name="upgrade_download_fail">下载出错！</string>
    <string name="upgrade_not_integrated">更新包不完整！</string>
    <string name="upgrade_unzip_fail">解压失败！</string>
    <string name="upgrade_apk_not_found">apk不存在！</string>
    <string name="upgrade_apk_sign_error">apk签名不一致！</string>
    <string name="upgrade_apk_not_valid">apk无法安装！</string>
    <string name="upgrade_apk_verify_error">安装错误！</string>
    <string name="upgrade_verify_package_fail">验证失败！</string>
    <string name="personal_nfc_start">请刷卡开始充电</string>
    <string name="personal_nfc_off_line_mode">离线模式</string>
    <string name="personal_nfc_upper_right">请右上方刷卡充电</string>
    <string name="jsm_group">佳仕美集团</string>
    <string name="jsm_charge">佳仕美充电</string>
    <string name="jsm_trip">佳仕美出行</string>
    <string name="home_wechat_scan_text">微信扫码 启动充电</string>
    <string name="home_wechat_or_nfc_scan_text">扫码或刷卡</string>
    <string name="home_wechat_operating_instructions">微信扫描左侧二维码，按提示进行下一步操作。</string>
    <string name="home_wechat_or_nfc_operating_instructions">微信扫描左侧二维码，或刷卡即刻开始充电。</string>
    <string name="home_wechat_app_scan_text">APP扫码或刷卡</string>
    <string name="home_wechat_app_operating_instructions">APP扫描左侧二维码，或刷卡即刻开始充电。</string>
    <string name="home_device_code">设备代码：%1$s</string>
    <string name="home_cur_electrovalence">当前电价：%1$s%2$s/度</string>
    <string name="home_cur_balance">当前余额：%1$s%2$s</string>
    <string name="home_cur_service_charge">(含服务费%1$s%2$s)</string>
    <string name="home_cur_electrovalence_free">(免单)</string>
    <string name="home_no_feepolicy">未配置计费策略</string>
    <string name="home_phash_type">本充电装置为%1$sA</string>
    <string name="personal_nfc_waiting_start">已刷卡请连接充电插头</string>
    <string name="waitting_start_hint_text">倒计时结束后将重新上锁</string>
    <string name="waitting_start_operation_tips">请尽快插枪\n或检查充电枪是否正确连接</string>
    <string name="waitting_stop_operation_tips">充电枪已解锁\n请将充电枪拔出轿车</string>
    <string name="waitting_gun_connect">(%1$s)\n正在检查车机连接状态，请稍候</string>
    <string name="wait_charge_hint">您已经插枪\n请尽快开始充电</string>
    <string name="bottom_hint">倒计时结束自动开始充电</string>
    <string name="nfc_relieve">您的充电卡必须在桩上配对使用，如您不继续进行充电的话，请再次刷卡解除配对并退出！</string>
    <string name="reserved_hint_text">您已预约%1$s启动充电，\n请确保枪头连接正常！</string>
    <string name="unit_kw">度</string>
    <string name="unit_second">秒</string>
    <string name="cur_cost">当前费用</string>
    <string name="charge_state_start">充电中</string>
    <string name="charge_state_stop">停止充电</string>
    <string name="charge_state_prepare">车机预充电</string>
    <string name="charge_state_trickle">车机涓流充电</string>
    <string name="charge_state_unknow">等待车机充电</string>
    <string name="total_delay_time">总耗时</string>
    <string name="total_power">充电电量</string>
    <string name="clearing_hint_text">请到手机端进行结算</string>
    <string name="cur_current_text">电流：%1$sA</string>
    <string name="cur_pwr_text">功率：%1$skW</string>
    <string name="charge_draw_gun_hint">正在检测连接状态：%1$s</string>
    <string name="charge_pause_charge_hint">充电停止\n%1$s秒后未继续充电将结束服务</string>
    <string name="charge_charge_mode_error">(%1$s)\n无法正常充电，请关闭车辆定时充电功能</string>
    <string name="charge_platform_billing">平台计费</string>
    <string name="drive_away_hint_text">距充电结束至今已延时%1$s，\n已产生延时费%2$s%3$s，请挪车!</string>
    <string name="drive_away_status_text">延迟费计算中</string>
    <string name="chargecomplete_text">充电结束</string>
    <string name="chargecomplete_drawgun_delayfee_hint">充电已在%1$s结束\n现在请尽快拔枪挪车</string>
    <string name="chargecomplete_drawgun_relieve_pairing_hint">充电已在%1$s结束\n但您的充电卡还未解除配对\n请再次刷卡，并尽快拔枪挪车</string>
    <string name="chargecomplete_drawgun_not_pay_hint">充电已在%1$s结束\n本次充电费用%2$s%3$s\n请刷卡支付，并尽快拔枪挪车</string>
    <string name="chargecomplete_drawgun_already_pay_hint">充电已在%1$s结束\n已经扣除本次充电费用%2$s%3$s\n请尽快拔枪挪车</string>
    <string name="chargecomplete_drawgun_app_pay_hint">充电已在%1$s结束\n请尽快拔枪挪车</string>
    <string name="chargecomplete_unlock_error_hint">如仍未解锁，请尝试将枪头完整的插回车端插座，\n保证枪头不被下压或产生变形(2秒后重试)</string>
    <string name="chargecomplete_drawgun_not_delayfee_hint">充电已在%1$s结束，\n现在请尽快拔枪挪车，否则\n%2$s分钟后将开始收取延误费！</string>
    <string name="chargecomplete_hint_text1">(资费标准：%1$s%2$s/分钟)</string>
    <string name="chargecomplete_hint_text2">若枪头锁住，请按屏幕下方按钮解锁</string>
    <string name="charge_cost_text">本次总费用估算</string>
    <string name="personal_charger_title">充电已完成</string>
    <string name="personal_cost_title">支付已完成</string>
    <string name="personal_cost_unbalance_title">未支付</string>
    <string name="personal_cost_app_balance_title">请到APP端完成支付</string>
    <string name="personal_cost_time">充电耗时：%1$s</string>
    <string name="personal_cost_pwr">累计充电：%1$s度</string>
    <string name="personal_cost_fee">累计消费：%1$s%2$s</string>
    <string name="personal_cost_balance">卡上余额：%1$s%2$s</string>
    <string name="personal_cost_unbalance">将在下次刷卡时扣费</string>
    <string name="paycomplete_welcome">欢迎下次使用</string>
    <string name="radar_find_car_hint">如不充电请勿停留，倒计时\n结束后将通知管理员处理！</string>
    <string name="radar_find_car_timerout_hint">如不充电请勿停留，\n已通知管理员！</string>
    <string name="radar_start_hint_text">开始充电\n按屏幕下方圆形按钮</string>
    <string name="radar_park_calibration_hint">雷达校准中，充电桩前请勿遮挡！</string>
    <string name="network_error_status_text">网络异常\n请尝试临近充电桩</string>
    <string name="cloud_error_status_text">云端服务不可用\n请尝试临近充电桩</string>
    <string name="anyo_private_network_error_status_text">网络异常\n请选择其他充电网点</string>
    <string name="anyo_private_cloud_error_status_text">正在连接服务器，请稍等</string>
    <string name="repair_scram_status_text">急停保护状态\n确认安全后请手动恢复!</string>
    <string name="device_not_initialized">充电桩未初始化</string>
    <string name="device_ground_invalid">充电桩地线未接</string>
    <string name="line_phase_lost">充电桩交流接线缺相</string>
    <string name="emergency_stop">充电桩紧急停止</string>
    <string name="line_voltage_exception">充电桩电压异常</string>
    <string name="line_current_exception">充电桩电流异常</string>
    <string name="device_temperature_exception">充电桩温度异常</string>
    <string name="device_current_leakage">充电桩漏电异常</string>
    <string name="communication_exception_with_auto">充电桩与汽车通讯异常</string>
    <string name="unexpected_current">电流没有达到预定值</string>
    <string name="voltage_exception_details">电压：%1$s/%2$s/%3$sV</string>
    <string name="current_exception_details">电流：%1$s/%2$s/%3$sA</string>
    <string name="temperature_exception_details">温度：%1$s°C</string>
    <string name="current_leakage_details">漏电电流：%1$sA</string>
    <string name="communication_details">CP电压：%1$sV</string>
    <string name="charge_nfc_error_termination">请刷充电卡或拔枪结束充电</string>
    <string name="charge_nfc_error_termination_exceed">该错误在当前充电过程中累计发生超过%1$s次\n请刷充电卡或拔枪结束充电</string>
    <string name="charge_onlie_error_termination">请拔枪结束充电</string>
    <string name="charge_onlie_error_termination_exceed">该错误在当前充电过程中已发生超过%1$s次\n请拔枪结束充电</string>
    <string name="charge_onlie_error_termination_key">请按键或拔枪结束充电</string>
    <string name="charge_onlie_error_termination_key_exceed">该错误在当前充电过程中已发生超过%1$s次\n请按键或拔枪结束充电</string>
    <string name="charge_pile_not_available">充电桩不可用</string>
    <string name="nfc_test_normal">NFC测试正常</string>
    <string name="nfc_processing">刷卡处理中，请稍等...</string>
    <string name="nfc_error">刷卡失败，请联系管理员</string>
    <string name="nfc_card_invalid">无效卡，请确认</string>
    <string name="nfc_invalid_manage_card_data">配置卡数据格式有误，请确认</string>
    <string name="nfc_set_fail">配置系统参数失败</string>
    <string name="nfc_bind_card_fail">配置个人卡失败，请重新刷卡</string>
    <string name="nfc_system_busy_repeat">充电处理中，请在充电结束后重新刷卡</string>
    <string name="nfc_scan_refuse">您的刷卡被系统拒绝，请稍后重新刷卡</string>
    <string name="nfc_invalid_port">系统故障，请尝试临近充电桩</string>
    <string name="nfc_unpaid_bill">您有一个未付款的充电账单，请刷卡支付</string>
    <string name="nfc_card_reserved">您的卡在其它充电桩上有未正常结束的充电，请确认</string>
    <string name="nfc_card_fail_repeat">您的卡必须在桩上配对使用，请再次刷卡解除配对</string>
    <string name="nfc_end_charge_failure">结束充电失败，请重新刷卡</string>
    <string name="nfc_card_auth_fail">卡%1$s身份验证失败，请联系管理员</string>
    <string name="nfc_card_unpaid_consume_ok_one">您成功支付了一个未付款账单\n充电耗时：%1$s\t累计充电：%2$s\n累计消费：%3$s\t卡上余额：%4$s\n请再次刷卡进行充电</string>
    <string name="nfc_card_unpaid_consume_fail">您有一个未付款的充电账单，但扣款失败，请刷卡支付</string>
    <string name="nfc_card_unpaid_balance_not_enough">您有一个未付款的充电账单，但卡上余额不足，请先充值</string>
    <string name="nfc_card_consume_fail">支付失败，请重新刷卡</string>
    <string name="nfc_card_balance_not_enough">卡上余额不足，请先充值</string>
    <string name="nfc_recovery_sign_fail">恢复卡数据失败，请重新刷卡</string>
    <string name="nfc_card_set">配置系统参数成功</string>
    <string name="nfc_card_bind">配置个人卡成功</string>
    <string name="nfc_not_group_mode">您的卡只能在集团桩上使用，请确认</string>
    <string name="nfc_not_personal_mode">您的卡只能在个人桩上使用，请确认</string>
    <string name="nfc_unavailable_cloud">抱歉，云端服务不可用，暂时不能提供在线卡服务</string>
    <string name="nfc_not_permit_swipe">您的卡在当前界面不允许使用，请确认</string>
    <string name="nfc_not_permit_swipe_advert">请在广告播放结束后重新刷卡</string>
    <string name="nfc_not_permit_swipe_upgrade">请在系统升级完成后重新刷卡</string>
    <string name="nfc_not_permit_swipe_charge">请在当前充电处理结束后重新刷卡</string>
    <string name="nfc_not_permit_swipe_bind">本界面只接受个人卡操作，请退出该界面后重新刷卡</string>
    <string name="nfc_read_failed">读卡失败，请重新刷卡</string>
    <string name="nfc_not_init_charge_card">您必须使用之前启动充电的卡来结束充电</string>
    <string name="nfc_init_fail">启动充电失败，请重新刷卡</string>
    <string name="nfc_swipe_processing">卡%1$s发起的处理还未结束，请稍候</string>
    <string name="nfc_consume_succ">扣费成功</string>
    <string name="error_invalid_qrcode">二维码已过期\n请点击下方按钮刷新</string>
    <string name="error_usergroup_forbidden">该用户组无法充电，请联系管理员</string>
    <string name="error_bill_unpaid">您上次有未支付账单，请先支付</string>
    <string name="error_bill_unpaid_with_fee">您上次有未支付账单：%1$s%2$s，请先支付</string>
    <string name="error_charge_unfinish">您有未结束的充电</string>
    <string name="keyboard_delete">退格</string>
    <string name="keyboard_ok">完成</string>
    <string name="keyboard_letter">字母</string>
    <string name="keyboard_space">空格</string>
    <string name="keyboard_left">左移</string>
    <string name="keyboard_right">右移</string>
</resources>