<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android" android:keyWidth="6.1%p" android:keyHeight="50dp" android:horizontalGap="0px" android:verticalGap="0px">
    <Row>
        <Key android:codes="33" android:keyEdgeFlags="left" android:keyLabel="@string/char_33"/>
        <Key android:codes="34" android:keyLabel="@string/char_34"/>
        <Key android:codes="35" android:keyLabel="@string/char_35"/>
        <Key android:codes="36" android:keyLabel="@string/char_36"/>
        <Key android:codes="37" android:keyLabel="@string/char_37"/>
        <Key android:codes="38" android:keyLabel="@string/char_38"/>
        <Key android:codes="39" android:keyLabel="@string/char_39"/>
        <Key android:codes="40" android:keyLabel="@string/char_40"/>
        <Key android:codes="41" android:keyLabel="@string/char_41"/>
        <Key android:codes="42" android:keyEdgeFlags="right" android:keyLabel="@string/char_42"/>
    </Row>
    <Row>
        <Key android:codes="43" android:keyEdgeFlags="left" android:keyLabel="@string/char_43"/>
        <Key android:codes="44" android:keyLabel="@string/char_44"/>
        <Key android:codes="45" android:keyLabel="@string/char_45"/>
        <Key android:codes="46" android:keyLabel="@string/char_46"/>
        <Key android:codes="47" android:keyLabel="@string/char_47"/>
        <Key android:codes="58" android:keyLabel="@string/char_58"/>
        <Key android:codes="59" android:keyLabel="@string/char_59"/>
        <Key android:codes="60" android:keyLabel="@string/char_60"/>
        <Key android:codes="61" android:keyLabel="@string/char_61"/>
        <Key android:codes="62" android:keyEdgeFlags="right" android:keyLabel="@string/char_62"/>
    </Row>
    <Row>
        <Key android:codes="63" android:keyEdgeFlags="left" android:keyLabel="@string/char_63"/>
        <Key android:codes="64" android:keyLabel="@string/char_64"/>
        <Key android:codes="91" android:keyLabel="@string/char_91"/>
        <Key android:codes="92" android:keyLabel="@string/char_92"/>
        <Key android:codes="93" android:keyLabel="@string/char_93"/>
        <Key android:codes="94" android:keyLabel="@string/char_94"/>
        <Key android:codes="95" android:keyLabel="@string/char_95"/>
        <Key android:codes="96" android:keyLabel="@string/char_96"/>
        <Key android:codes="123" android:keyLabel="@string/char_123"/>
        <Key android:codes="-5" android:keyEdgeFlags="right" android:keyLabel="@string/keyboard_delete"/>
    </Row>
    <Row>
        <Key android:codes="1001" android:keyEdgeFlags="left" android:keyLabel="@string/keyboard_letter"/>
        <Key android:codes="124" android:keyLabel="@string/char_124"/>
        <Key android:codes="125" android:keyLabel="@string/char_125"/>
        <Key android:codes="126" android:keyLabel="@string/char_126"/>
        <Key android:keyWidth="9.1%p" android:codes="1002" android:keyLabel="@string/keyboard_left"/>
        <Key android:keyWidth="9.1%p" android:codes="1003" android:keyLabel="@string/keyboard_space"/>
        <Key android:keyWidth="9.1%p" android:codes="1004" android:keyLabel="@string/keyboard_right"/>
        <Key android:keyWidth="9.1%p" android:codes="-3" android:keyEdgeFlags="right" android:isRepeatable="true" android:keyLabel="@string/keyboard_ok"/>
    </Row>
</Keyboard>
